@@ -8,6 +8,9 @@ debian-installer-utils (0.39) UNRELEASED; urgency=low
     - Update da (Danish) translation.
   * Ilgiz Kalmetev
     - Updated Russian translation.
+  * Alastair McKinstry
+    - Add di-utils-devicefiles module, to supply device files for systems
+      not using devfs (or udev).
 
  -- Joey Hess <joeyh@debian.org>  Fri,  7 Nov 2003 21:59:02 -0500
 
